--- a/style/playlist.css
+++ b/style/playlist.css
@@ -20,8 +20,7 @@ body {
   display: flex;
   justify-content: center;
   padding: 2rem;
-  box-sizing: border-box;
-}
+  box-sizing: content-box;
 
 /* ---- Main container ---- */
 #playlist-ui {
@@ -29,7 +28,7 @@ body {
   background: #181818;
   border: 1px solid rgba(255,255,255,.25);
   padding: 6rem;
-  box-sizing: border-box;
+  box-sizing: content-box;
 }
 
 /* ---- Headings / readouts ---- */
