--- a/style/playlist.css
+++ b/style/playlist.css
@@ -19,8 +19,8 @@ body {
 .wrap {
   display: flex;
   justify-content: center;
-  padding: 2rem;
-  box-sizing: border-box;
+  padding: 0;
+  box-sizing: content-box;
 
 /* ---- Main container ---- */
 #playlist-ui {
@@ -28,7 +28,7 @@ body {
   background: #181818;
   border: 1px solid rgba(255,255,255,.25);
   padding: 6rem;
-  box-sizing: border-box;
+  box-sizing: content-box;
 }
 
 /* ---- Headings / readouts ---- */
@@ -43,7 +43,7 @@ body {
 #playlist-ui .rnbo-hint,
 #playlist-ui .rnbo-meta {
   color: #7c7c7c;
-  font-size: 2.1rem;
+  font-size: 1.8rem;
   line-height: 1.48em;
 }
 
@@ -130,7 +130,7 @@ body {
 #playlist-ui .rnbo-progress {
   width: 100%;
   height: 1rem;
-  background: #212121;
+  background: #75c986;
   border: 1px solid rgba(255,255,255,.25);
   margin-top: 2rem;
 }
@@ -177,7 +177,7 @@ body {
   height: 5.6rem;
   border-radius: 100%;
   border: 0.1rem solid #fff;
-  background: none;
+  background: #3e3e40;
   color: #fff;
   display: inline-flex;
   align-items: center;
@@ -188,7 +188,7 @@ body {
 /* Filename */
 #playlist-ui .rnbo-filename {
   color: #fff;
-  font-size: 3.4rem;
+  font-size: large;
   line-height: 1.4em;
   letter-spacing: -0.005em;
   font-weight: 300;
@@ -199,21 +199,21 @@ body {
 #playlist-ui .rnbo-canvas {
   width: 100%;
   height: auto;
-  background: #212121;
+  background: #303030;
   border: 1px solid rgba(255,255,255,.25);
 }
 
 /* ---- Mobile ---- */
-@media (max-width: 800px) {
+@media (max-width: 844px) {
   #playlist-ui {
-    padding: 4rem;
+    padding: 60px;
   }
 
   #playlist-ui .rnbo-slider {
-    width: 22rem;
+    width: auto;
   }
 
   #playlist-ui .rnbo-filename {
-    font-size: 2.6rem;
+    font-size: large;
   }
 }
